# pomotoro

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  ROADMAP.md  TASK_CYCLING_IMPLEMENTATION.md  Trunk.toml  dev.sh  justfile  package-lock.json  package.json  rustfmt.toml  styles-original.css.backup  styles.css  test_pause.sh  todo.md
apps/tauri-app/: Cargo.toml  build-react.sh  serve-react.sh  tauri.conf.json
apps/tauri-app/capabilities/: default.json
apps/tauri-app/icons/: gen_toro_icon.py  gen_tray_icons.py  icon.icns
apps/tauri-app/src/: lib.rs  tray.rs
core/domain/: Cargo.toml  README.md
core/domain/src/: lib.rs
core/infra/: Cargo.toml
core/infra/src/: bootstrap.rs  lib.rs  schema.rs
domain/: Cargo.toml  README.md
domain/src/: events.rs  lib.rs
domain/src/audio/: asset.rs  audio_srv.rs  category.rs  error.rs
domain/src/config/: appearance.rs  config.rs  config_repo.rs  general.rs  mod.rs  notification.rs  repo.rs  task_defaults.rs  test_repository.rs
domain/src/event_names/: commands.rs  mod.rs  ui_listeners.rs
domain/src/events/: commands.rs  handler.rs  mod.rs  ui.rs
domain/src/shared_kernel/: errors.rs  mod.rs  serde_utils.rs
domain/src/task/: builder.rs  config.rs  cycle_service.rs  cycling.rs  cycling_service.rs  cycling_srv.rs  id.rs  mod.rs  repo.rs  repository.rs  settings.rs  status.rs  task.rs  test_builder.rs  test_cycling_service.rs  test_repository.rs
domain/src/timer/: README.md  error.rs  id.rs  mod.rs  phase_transition_service.rs  repository.rs  service.rs  state.rs  state_machine.rs  state_with_task.rs  status.rs  timer.rs  timer_srv.rs  transitions.rs
infra/: Cargo.toml  Trunk.toml  tauri.conf.json
infra/examples/: config_builder_demo.rs
infra/migrations/2025-01-01-000001_create_initial_schema/: down.sql  up.sql
infra/src/: bootstrap.rs  init_guard.rs  lib.rs  main.rs  schema.rs
infra/src/adapters/: mod.rs  notifications.rs
infra/src/commands/: audio_cmd.rs  config_cmd.rs  init_wrapper.rs  mod.rs  notification_cmd.rs  storage_cmd.rs  task_cmd.rs  task_settings_cmd.rs  timer_cmd.rs
infra/src/controllers/: audio_ctrl.rs  config_ctrl.rs  mod.rs  task_ctrl.rs  timer_ctrl.rs
infra/src/infrastructure/: audio_srv.rs  config_builder.rs  config_repo.rs  events.rs  mod.rs  notifications.rs  timer_models.rs  timer_srv.rs
infra/tests/: file_storage_integration.rs  main.rs  setup.rs
infra/tests/app/: adv_timer.rs  config.rs  mod.rs  setup.rs  task.rs  timer.rs
infra/tests/audio/: integration.rs  mod.rs
infra/tests/core/: integration.rs  macros.rs  mod.rs  utils.rs
infra/tests/task/: e2e.rs  integration.rs  mod.rs  search_integration.rs
infra/tests/timer/: e2e.rs  integration.rs
pomotoro-domain/: Cargo.toml
pomotoro-domain/src/: errors.rs  events.rs  lib.rs
pomotoro-domain/src/audio/: asset.rs  audio_asset.rs  audio_category.rs  audio_srv.rs  category.rs  library.rs  mod.rs
pomotoro-domain/src/config/: appearance.rs  audio.rs  audio_config.rs  config.rs  general.rs  mod.rs  notification.rs  repository.rs  task_defaults.rs
pomotoro-domain/src/events/: domain_event.rs  mod.rs  task_events.rs  timer_events.rs
pomotoro-domain/src/shared_kernel/: errors.rs  mod.rs  serde_utils.rs
pomotoro-domain/src/task/: builder.rs  config.rs  cycling_service.rs  cycling_srv.rs  events.rs  id.rs  mod.rs  repo.rs  repository.rs  session_service.rs  session_srv.rs  task.rs  task_config.rs  task_status.rs  test_builder.rs
pomotoro-domain/src/timer/: events.rs  mod.rs  phase.rs  phase_transition_service.rs  phase_transition_srv.rs  state.rs  status.rs  timer.rs  timer_state.rs  timer_state_with_task.rs  timer_status.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: config_builder_demo.rs
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/audio/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/config/: commands.rs  mod.rs  repository.rs  types.rs
src-tauri/src/controllers/: audio_ctrl.rs  config_ctrl.rs  task_ctrl.rs  timer_ctrl.rs
src-tauri/src/core/: mod.rs
src-tauri/src/infrastructure/: audio_asset_provider.rs  audio_srv.rs  config_builder.rs  config_repo.rs  events.rs  mod.rs  task_cycling_srv.rs  task_repo.rs.bak  timer_models.rs  timer_srv.rs
src-tauri/src/task/: commands.rs  mod.rs  repository.rs  types.rs
src-tauri/src/timer/: commands.rs  manager.rs  mod.rs  notifications.rs  service.rs  types.rs
src-tauri/tests/: basic_tests.rs  e2e.md  main.rs
src-tauri/tests/audio/: integration.rs
src-tauri/tests/common/: app_builder.rs  fixtures.rs  mock_audio.rs  mod.rs  test_config.rs  time_utils.rs
src-tauri/tests/core/: fixtures.rs  integration.rs  mod.rs
src-tauri/tests/integration/: audio_tests.rs  config_tests.rs  mod.rs  task_tests.rs  timer_tests.rs
src-tauri/tests/task/: e2e.rs  integration.rs  mod.rs
src-tauri/tests/timer/: e2e.rs  integration.rs
src-tauri/tests/workflows/: mod.rs
ui/: Cargo.toml  index.html  styles.css  utilities.css
ui/src/: app.rs  lib.rs
ui/src/app_vm/: USAGE.md  accessors.rs  initialization.rs  mod.rs  timer_events.rs
ui/src/components/: circular_progress.rs  error_toast.rs  mod.rs  navigation.rs  page_header.rs  screen_blocker.rs  sidebar.rs  task_completion_indicator.rs  task_cycle_controls.rs  task_settings.rs
ui/src/pages/: mod.rs
ui/src/shared/: mod.rs  view_model_base.rs
ui/src/store/: events.rs  mod.rs
ui/src/utils/: events.rs  mod.rs  view_model.rs
ui/styles/: settings.css  task-cycling.css  task-settings.css
usecases/: Cargo.toml
usecases/src/: bootstrap.rs  lib.rs
usecases/src/audio/: manage_library.rs  mod.rs  notification_audio.rs  play_audio.rs
usecases/src/config/: export_config.rs  get_config.rs  import_config.rs  mod.rs  reset_config.rs  update_config.rs
usecases/src/events/: event_registrar.rs  handler_registry.rs  mod.rs  registry.rs
usecases/src/task/: complete_session.rs  complete_task.rs  create_task.rs  cycle_incomplete_task.rs  cycle_task.rs  delete_task.rs  get_effective_task_settings.rs  mappers.rs  (+14 more)
(+1063 files in other folders)
