[workspace]
members = ["ui", "usecases", "infra", "domain"]
resolver = "3"

[workspace.dependencies]
# Core shared dependencies used across multiple crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
async-trait = "0.1"

# Async runtime (used in domain, usecases, infra)
tokio = { version = "1.47.1", features = ["time", "sync", "rt-multi-thread", "test-util", "macros"] }

# Testing dependencies (shared across crates)
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"
serial_test = "3.0"

# UI-specific dependencies (Leptos ecosystem)
leptos = { version = "0.8.3", features = ["csr"] }
leptos_router = { version = "0.8.3" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = "0.3"
anyhow = "1.0.98"

# Infrastructure-specific dependencies (Tauri ecosystem)
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
tauri-build = { version = "2.3.1", features = [] }
rodio = "0.21.1"
dirs = "6.0.0"

