[workspace]
members = ["ui", "usecases", "infra", "domain", "infrastructure"]
resolver = "3"

[workspace.dependencies]
# Core shared dependencies used across multiple crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
async-trait = "0.1"

# Async runtime (used in domain, usecases, infra)
tokio = { version = "1.47.1", features = ["time", "sync", "rt-multi-thread", "test-util", "macros"] }

# Testing dependencies (shared across crates)
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"
serial_test = "3.0"

# File system utilities (shared between domain and infra)
dirs = "6.0.0"



