[workspace]
members = ["ui", "usecases", "infra", "domain"]
resolver = "3"

[workspace.dependencies]
# Core shared dependencies used across multiple crates
anyhow = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.16"
async-trait = "0.1.89"
tracing = "0.1"
# Async runtime (used in domain, usecases, infra)
tokio = { version = "1.47.1", features = ["time", "sync", "rt-multi-thread", "test-util", "macros"] }

# Database dependencies
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.2"
r2d2 = "0.8"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

# Testing dependencies (shared across crates)
tokio-test = "0.4"
tempfile = "3.21.0"
assert_matches = "1.5"
serial_test = "3.0"

# File system utilities (shared between domain and infra)
dirs = "6.0.0"



