[package]
name = "domain"
version = "0.1.0"
edition = "2021"
description = "Core domain entities and business logic for Pomotoro"

[dependencies]
# Core serialization and data types
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# File system utilities (for config paths)
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
test-utils = []