[package]
name = "infra"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer for Pomotoro with Tauri backend"

[lib]
name = "infra"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
domain = { path = "../domain" }
usecases = { path = "../usecases" }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
assert_matches = { workspace = true }
serial_test = { workspace = true }

[features]
default = []

[[test]]
name = "main"
path = "tests/main.rs"