[package]
name = "infra"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer for Pomotoro with Tauri backend"
default-run = "infra"

[lib]
name = "infra"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
domain = { path = "../domain" }
usecases = { path = "../usecases" }
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-log = "2.0"
log = "0.4"
rodio = "0.21.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0.98"
open = "5.0"
futures = "0.3"

# Database dependencies
diesel = { workspace = true }
diesel_migrations = { workspace = true }
r2d2 = { workspace = true }
libsqlite3-sys = { workspace = true }


[dev-dependencies]
domain = { path = "../domain", features = ["test-utils"] }
tokio-test = { workspace = true }
tempfile = { workspace = true }
assert_matches = { workspace = true }
serial_test = { workspace = true }

[features]
default = []

[[test]]
name = "main"
path = "tests/main.rs"
