[package]
name = "pomotoro-domain"
version = "0.1.0"
edition = "2021"
description = "Core domain entities and business logic for Pomotoro"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
dirs = "5.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }