[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Leptos frontend UI for Pomotoro"

[lib]
crate-type = ["cdylib"]

[dependencies]
# UI framework dependencies
leptos = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

# UI components - using standard HTML with CSS styling

# Serialization for communication with backend
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Utilities
anyhow = { workspace = true }
console_error_panic_hook = { workspace = true }

# Domain layer (for types only - UI should not call domain logic directly)
domain = { path = "../domain" }