[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Leptos frontend UI for Pomotoro"

[lib]
crate-type = ["cdylib"]

[dependencies]
# UI framework dependencies
leptos = { version = "0.8.3", features = ["csr"] }
leptos_router = { version = "0.8.3" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# UI components - using standard HTML with CSS styling

# Serialization for communication with backend
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Utilities
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"

# Domain layer (for types only - UI should not call domain logic directly)
domain = { path = "../domain" }