[package]
name = "tauri-app"
version = "0.1.5"
edition = "2021"
description = "Tauri desktop application for Pomotoro"
default-run = "tauri-app"

[lib]
name = "tauri_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
# Internal dependencies
infra = { path = "../../core/infra" }
domain = { path = "../../core/domain" }
usecases = { path = "../../core/usecases" }

# Tauri dependencies
tauri = { version = "2.7.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-log = "2.0"

# Logging
log = "0.4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = "1.0.98"

# Other utilities
chrono = { workspace = true }
dirs = { workspace = true }
open = "5.0"

# Linux desktop notifications (used to set the application name shown in the
# notification header; the Tauri plugin does not expose this).
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11"

[features]
default = []
